[tool.poetry]
name = "hh-api-psql"
version = "0.1.0"
description = ""
authors = ["Сергей Арефьев <<Simpson6515@yandex.ru>"]
readme = "README.md"
packages = [{include = "hh_api_psql"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
